tests/NormalTests/paczka1/small_fuzzy/43398802.err
Error in line 1: LYjvcP6N37 S961 5,3
Error in line 4: zzii3N S961 24,2
Error in line 6: KubmH S961 95,3
Error in line 7: KubmH S892 63,5
